tests/miniJava/neg/006181_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { this java [ 0 ] = 0 ; } }
